tests/baselines/reference/privateStaticNotAccessibleInClodule.errors.txt
privateStaticNotAccessibleInClodule.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
privateStaticNotAccessibleInClodule.ts(9,22): error TS2341: Property 'bar' is private and only accessible within class 'C'.


==== privateStaticNotAccessibleInClodule.ts (2 errors) ====
    // Any attempt to access a private property member outside the class body that contains its declaration results in a compile-time error.
    
    class C {
        private foo: string;
        private static bar: string;
    }
    
    module C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var y = C.bar; // error
                         ~~~
!!! error TS2341: Property 'bar' is private and only accessible within class 'C'.
    }